(lang dune 3.15)

(name aoc_2023)

(generate_opam_files true)

(source
 (github kumanna/aoc2023))

(authors "Kumar Appaiah")

(maintainers "Kumar Appaiah")

;(license LICENSE)

;(documentation https://url/to/documentation)

(package
 (name aoc_2023)
 (synopsis "Advent of Code 2023")
 (description "Some solutions in OCaml")
 (depends ocaml dune)
 (tags
  (topics "ocaml" "aoc")))
